--- a/local/lib/perl5/darwin-2level/perllocal.pod
+++ b/local/lib/perl5/darwin-2level/perllocal.pod
@@ -3034,3 +3034,25 @@ C<EXE_FILES: >
 
 =back
 
+=head2 Thu Jun 28 08:39:37 2018: C<Module> L<DateTime::Format::W3CDTF|DateTime::Format::W3CDTF>
+
+=over 4
+
+=item *
+
+C<installed into: /Users/miyamura-koyo/Jobeet/local/lib/perl5>
+
+=item *
+
+C<LINKTYPE: dynamic>
+
+=item *
+
+C<VERSION: 0.07>
+
+=item *
+
+C<EXE_FILES: >
+
+=back
+
